# refactorerl

refactorerl-0.9.15.04/: COPYRIGHT.txt  Makefile  README.txt  bufferserver.cabal  build.rules  local_install_linux.txt
refactorerl-0.9.15.04/lib/: build.rules
refactorerl-0.9.15.04/lib/referl_cluster/doc/: overview.edoc
refactorerl-0.9.15.04/lib/referl_cluster/include/: cluster.hrl  kcl.hrl  ucl_options.hrl  ucl_types.hrl  ucluster.hrl
refactorerl-0.9.15.04/lib/referl_cluster/src/: cl_attr.erl  cl_core.erl  cl_cs.erl  cl_cutlib.erl  cl_distfun.erl  cl_draw_graph.erl  cl_fitness.erl  cl_fuzzy_c_means.erl  cl_genetic.erl  cl_groupfun.erl  cl_interface.erl  cl_kmeans.erl  cl_matrix.erl  cl_mergefun.erl  cl_misc.erl  cl_out.erl  cl_print.erl  cl_ui.erl  cl_utils.erl  multi_hashtree.erl  refcl_main.erl  referl_cluster.appspec  set_dict.erl  ucl_alg.erl  ucl_alg_dm.erl  ucl_attr.erl  ucl_clustering.erl  ucl_common.erl  ucl_config.erl  ucl_connection.erl  ucl_exec.erl  ucl_options.erl  ucl_state.erl
refactorerl-0.9.15.04/lib/referl_core/: build.rules
refactorerl-0.9.15.04/lib/referl_core/doc/: overview.edoc
refactorerl-0.9.15.04/lib/referl_core/include/: core_export.hrl  core_global.hrl
refactorerl-0.9.15.04/lib/referl_core/src/: core.hrl  refanal_dataflow.erl  refanal_dynfun.erl  refanal_ets.erl  refanal_expr.erl  refanal_fun.erl  refanal_list.erl  refanal_message.erl  refanal_metrics.erl  refanal_metrics_helper.erl  refanal_mod.erl  refanal_pp_anal.erl  (+38 more)
refactorerl-0.9.15.04/lib/referl_ui/: build.rules
refactorerl-0.9.15.04/lib/referl_user/: build.rules
(+607 files in other folders)
